<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookHunting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="search_book">Search Book</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_books">Search Books</string>
    <string name="back">Back</string>
    <string name="searchGenre">Search By Genre</string>
    <string name="searchWord">Search By Keyword</string>
    <string name="error_title">Error</string>
    <string name="error_message">There was an error</string>

    <string-array name="spinner_items">
        <item>Accounting</item>
        <item>Anthropology</item>
        <item>Communication</item>
        <item>Criminology</item>
        <item>Creative Writing</item>
        <item>Computing Science</item>
        <item>EASL</item>
        <item>Early Childhood Education</item>
        <item>Economics</item>
        <item>English</item>
    </string-array>

    <string name="title_activity_results_screen">ResultsScreen</string>
    <string name="title_activity_results_detail">ResultsDetail</string>
    <string name="noBookFound">Sorry no books found from that search</string>
    <string name="aboutUs">I am a 22 year old CSIS student at Douglas College currently in my last year of studies. This was a project made for my Applied Research Class.</string>
    <string name="contactUs">You can contact me anytime, with suggestions or comments.</string>
    <string name="email">Email: bookhunting@gmail.com</string>
    <string name="key_word">Keyword</string>
    <string name="genre">Genre</string>
    <string name="title">"Title:  "</string>
    <string name="amaprice">"Price on Amazon: "</string>
    <string name="author">Author:</string>
    <string name="dcprice">Douglas Bookstore Price:</string>
    <string name="pubdate">Publishing Date:</string>

</resources>
