<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchScreen" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:text="@string/search_books"
        android:textSize="30sp" />

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="clickBack"
        android:text="@string/back" />

    <Spinner
        android:id="@+id/genreSpinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/txtSearchTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="181dp" />

    <Button
        android:id="@+id/btnSearchGenre"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/genreSpinner"
        android:layout_alignTop="@+id/genreSpinner"
        android:layout_marginTop="59dp"
        android:onClick="clickGenre"
        android:text="@string/searchGenre" />

    <EditText
        android:id="@+id/txtSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/genreSpinner"
        android:layout_alignLeft="@+id/back"
        android:layout_marginBottom="79dp"
        android:ems="10" />

    <Button
        android:id="@+id/btnTitle"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/genreSpinner"
        android:layout_alignLeft="@+id/txtSearchTitle"
        android:layout_marginBottom="42dp"
        android:onClick="clickTitle"
        android:text="@string/searchWord" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtSearchTitle"
        android:layout_alignLeft="@+id/txtSearchTitle"
        android:text="@string/key_word"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/genreSpinner"
        android:layout_alignLeft="@+id/genreSpinner"
        android:text="@string/genre"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>