<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >

    <Button
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text="@string/about"
        android:onClick="clickAbout" />

    <Button
        android:id="@+id/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/About"
        android:layout_alignLeft="@+id/About"
        android:layout_marginBottom="63dp"
        android:text="@string/search_book"
        android:onClick="clickSearch" />

    <Button
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/About"
        android:layout_below="@+id/About"
        android:layout_marginTop="17dp"
        android:text="@string/contact" 
        android:onClick="clickContact"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Search"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/home"
        android:textSize="40sp" />

</RelativeLayout>
